tests/invalid/units_discriminator_middot_multiplication.esm
{
  "esm": "0.8.0",
  "metadata": {
    "name": "UnitsDiscriminatorMiddotMultiplication",
    "description": "Invalid: The middot `·` normalises to `*` -- MULTIPLICATION (§4.8.2) -- and must not be dropped. `bad_cp` is declared `m^2/s^2` but its expression is `cp`, in `J/(kg·K)` = m^2*s^-2*K^-1; the two differ by K^-1. A correct binding rejects. A parser that fails to normalise `·` and skips the character reads `kg·K` as `kg`, computes `J/kg` = `m^2/s^2`, and ACCEPTS. This is the NEGATIVE half of the discriminator in tests/valid/units_registry_grammar.esm. A VALID fixture can only prove a binding does not FALSELY REJECT; it CANNOT prove the binding checks anything -- mutation testing showed every observed variable in the valid fixture could be corrupted and still pass, because no binding compared a declared unit against the dimension its expression computes. This file makes the same assertion in the contrapositive: a CORRECT binding REJECTS it, and a binding carrying the bug ACCEPTS it. Everything but the one observed variable is dimensionally clean.",
    "authors": [
      "EarthSciML"
    ],
    "created": "2026-07-14T00:00:00Z"
  },
  "models": {
    "BadUnitsModel": {
      "variables": {
        "y": {
          "type": "state",
          "units": "1",
          "description": "State. Dimensionally clean; not part of the defect."
        },
        "k": {
          "type": "parameter",
          "units": "1/s",
          "default": 1.0,
          "description": "Decay rate. Dimensionally clean; not part of the defect."
        },
        "cp": {
          "type": "parameter",
          "units": "J/(kg·K)",
          "default": 1.0,
          "description": "Specific heat capacity, spelled with a MIDDOT."
        },
        "bad_cp": {
          "type": "observed",
          "units": "m^2/s^2",
          "description": "THE ONLY DEFECT: declared units do not match the dimension its expression computes.",
          "expression": "cp"
        }
      },
      "equations": [
        {
          "lhs": {
            "op": "D",
            "args": [
              "y"
            ],
            "wrt": "t"
          },
          "rhs": {
            "op": "*",
            "args": [
              {
                "op": "-",
                "args": [
                  "k"
                ]
              },
              "y"
            ]
          }
        }
      ]
    }
  }
}
